# Munchkin

./: README.md  arm.py  constants.py  control.py  main.py  mouth_jobs.py  munchkin.py  munchkin.py.new  post_process.py  pyproject.toml  robot.py  test.py
recordings/: RECORDED_ANGLES.pkl  Scoop.pkl  Scoop_OLD.pkl
sandbox/: WORKING_POINTS.pkl  lewansoul_servo_bus.py  main.py  main_old.py  mouth_tracking.py  play_angles.py  record_points.py  test.py
tools/: move_limits.py  set_id.py
